fix: video titles can overflow, not fixed yet

--- a/src/components/Song.css
+++ b/src/components/Song.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     margin: 15px 0;
+    /* max-width: 700px; */
+    max-width: 100%;
 }
 
 .song > div {
@@ -24,4 +26,8 @@
 
 .song > div > h3 {
     margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* max-width: 100%; */
 }
